# dbx-ai-dev-kit

./: .databricks-resources.json  .gitignore  .mcp.json  README.md  app.py  databricks.yml  deploy.sh  pyproject.toml  requirements.txt
.ai-dev-kit/: .installed-skills
.codex/: config.toml
docs/: codex-prompts.md  demo-flow.md  repo-map.md
resources/: jobs.yml  pipelines.yml
scripts/: generate_iot_data.py  generate_iot_demo_data.py  render_genie_space_payload.py
src/genie/: genie_space.template.yml
src/notebooks/: 01_seed_demo_data.py  02_validate_demo_outputs.py
src/pipelines/genie_demo_pipeline/transformations/: telemetry_pipeline.py
